--- a/style.css
+++ b/style.css
@@ -1,45 +1,45 @@
 html {
-  font-family: sans-serif;
-  font-size: 16px;
-  box-sizing: border-box;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 16px;
+	box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 body {
-  max-width: 692px;
-  margin: 0 auto;
-  padding: 20px;
-  line-height: 1.5;
+	max-width: 692px;
+	margin: 0 auto;
+	padding: 20px;
+	line-height: 1.5;
 }
 
 img {
-  width: 100%;
+	width: 100%;
 }
 
 .img-container {
-  width: 450px;
-  margin: 0 auto;
+	width: 450px;
+	margin: 0 auto;
 }
 
 .container {
-  /* grid | inline-grid */
-  display: grid;
-  width: 100%;
-  min-height: 85vh;
-  background-color: lightcoral;
-  border: 1px solid orangered;
+	/* grid | inline-grid */
+	display: grid;
+	width: 100%;
+	min-height: 85vh;
+	background-color: lightcoral;
+	border: 1px solid orangered;
 }
 
-.container>div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: lightsalmon;
-  border: 2px solid white;
-  outline: 1px solid orangered;
+.container > div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: lightsalmon;
+	border: 2px solid white;
+	outline: 1px solid orangered;
 }
